--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,9 @@ version: 0.1.0
 environment:
   sdk: ">=1.8.0 <2.0.0"
 dependencies:
-  bridge: ">=1.0.0-alpha2 <2.0.0"
+  bridge:
+    git:
+      url: https://github.com/dart-bridge/framework
+      ref: develop
 dev_dependencies:
   test: any
