--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-.buildlog
 .pub/
-build/
-packages
+.packages
 .env
-
-# dart2js
-*.dart.js
-*.js_
-*.js.deps
-*.js.map
-
-pubspec.lock
-
-cupid.log
 .cupid_history
+packages
+pubspec.lock
